# routes/api/v1/auth.php
@@ -1,6 +1,5 @@
 <?php
 
-use App\Http\Controllers\Auth\PersonalAccessTokenController;
 use App\Http\Controllers\Auth\SanctumAuthController;
 use Illuminate\Support\Facades\Route;
 
@@ -11,8 +10,7 @@ Route::middleware(['throttle:auth'])->prefix('auth')->as('auth.')->group(functio
     Route::middleware(['auth:sanctum'])->group(function () {
         Route::post('logout', [SanctumAuthController::class, 'logout'])->name('logout');
         Route::post('me', [SanctumAuthController::class, 'me'])->name('me');
-        Route::delete('/personal-access-tokens', [PersonalAccessTokenController::class, 'destroy']);
-    });
 
-    Route::post('/personal-access-tokens', [PersonalAccessTokenController::class, 'store']);
+        Route::post('refresh-token', [SanctumAuthController::class, 'refresh'])->name('refresh');
+    });
 });
