# storage/api-docs/api-docs.json
@@ -184,6 +184,38 @@
                             }
                         }
                     },
+                    "403": {
+                        "description": "Forbidden",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "errors": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "status": {
+                                                        "type": "integer",
+                                                        "example": 403
+                                                    },
+                                                    "message": {
+                                                        "type": "string",
+                                                        "example": "This action is unauthorized."
+                                                    },
+                                                    "source": {
+                                                        "type": "string",
+                                                        "example": ""
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
                     "422": {
                         "description": "Validation Error",
                         "content": {
@@ -1132,7 +1164,8 @@
                                 "required": [
                                     "name",
                                     "email",
-                                    "password"
+                                    "password",
+                                    "password_confirmation"
                                 ],
                                 "properties": {
                                     "name": {
@@ -1173,19 +1206,19 @@
                                         },
                                         "data": {
                                             "properties": {
-                                                "token": {
+                                                "accessToken": {
                                                     "type": "string",
-                                                    "example": "67a313ecb48232f83a02ce83|9k6gGrxJZRfAVsbNfMYOTGKZUKjBwWHDYC4nLEVS5106eb6d"
+                                                    "example": "67b44704b7dabb5ccd037c10|JaAcoNkoMkW4debCEaVTOtqyS1ycHp7ZWroq15RY97ea1576"
                                                 },
                                                 "user": {
                                                     "properties": {
                                                         "name": {
                                                             "type": "string",
-                                                            "example": "John Doe"
+                                                            "example": "test"
                                                         },
                                                         "email": {
                                                             "type": "string",
-                                                            "example": "john.doe@example.com"
+                                                            "example": "test18@example.com"
                                                         },
                                                         "emailVerifiedAt": {
                                                             "type": "string",
@@ -1195,16 +1228,16 @@
                                                         "updatedAt": {
                                                             "type": "string",
                                                             "format": "date-time",
-                                                            "example": "2025-02-05 06:56:23"
+                                                            "example": "2025-02-18 08:38:28"
                                                         },
                                                         "createdAt": {
                                                             "type": "string",
                                                             "format": "date-time",
-                                                            "example": "2025-02-05 06:56:23"
+                                                            "example": "2025-02-18 08:38:28"
                                                         },
                                                         "id": {
                                                             "type": "string",
-                                                            "example": "67a30b97677e1eb7ed0b0c67"
+                                                            "example": "67b44704b7dabb5ccd037c0f"
                                                         }
                                                     },
                                                     "type": "object"
@@ -1335,9 +1368,9 @@
                                         },
                                         "data": {
                                             "properties": {
-                                                "token": {
+                                                "accessToken": {
                                                     "type": "string",
-                                                    "example": "67a32a7bc069417b6e095fd3|mPepplrajIRB22DLJBH6ccphvMItt0lLSpq6Kcr9b5de3abf"
+                                                    "example": "67b443f25ddf821592094e98|plXajuOvCw8jUbdPcXOXJZiEn4wA7wCefpkLgHsJda024c70"
                                                 },
                                                 "user": {
                                                     "properties": {
@@ -1352,21 +1385,21 @@
                                                         "emailVerifiedAt": {
                                                             "type": "string",
                                                             "format": "date-time",
-                                                            "example": "2025-02-05 06:56:23"
+                                                            "example": "2025-02-13 12:36:35"
                                                         },
                                                         "updatedAt": {
                                                             "type": "string",
                                                             "format": "date-time",
-                                                            "example": "2025-02-05 06:56:23"
+                                                            "example": "2025-02-13 12:36:35"
                                                         },
                                                         "createdAt": {
                                                             "type": "string",
                                                             "format": "date-time",
-                                                            "example": "2025-02-05 06:56:23"
+                                                            "example": "2025-02-13 12:36:35"
                                                         },
                                                         "id": {
                                                             "type": "string",
-                                                            "example": "67a30b97677e1eb7ed0b0c67"
+                                                            "example": "67ade753c3f4971059007e97"
                                                         }
                                                     },
                                                     "type": "object"
@@ -1642,6 +1675,90 @@
                         "sanctum": []
                     }
                 ]
+            }
+        },
+        "/api/auth/refresh-token": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Refresh access token",
+                "operationId": "45bb122eb4a0b6763017311c20059b54",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [],
+                                "type": "object"
+                            },
+                            "example": []
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Access token refreshed successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "accessToken": {
+                                                    "type": "string",
+                                                    "example": "67b44b44fdfe254315079401|PRStJVgVkcLnhgXx92WG9em89DR0xqJoUh9hFjAc0ff5535a"
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Refresh access token successfully."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "errors": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "status": {
+                                                        "type": "integer",
+                                                        "example": 401
+                                                    },
+                                                    "message": {
+                                                        "type": "string",
+                                                        "example": "Unauthenticated."
+                                                    },
+                                                    "source": {
+                                                        "type": "string",
+                                                        "example": ""
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
             }
         }
     },
